src/app/component/link-preview/link-preview.scss
// Container
.preview {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--grey-bg);
  height: 100%;
  border-right: black 4px solid;
}

.preview-title {
  margin-top: 20px;
  margin-bottom: 20px;
}

// Favicon
.favicon {
  width: 70%;
  height: 70%;
  align-self: center;
  image-rendering: pixelated;
}

.favicon-wrapper {
  width: 70%;
  aspect-ratio: 1 / 1;
  display: flex;
  justify-content: center;
  background-color: var(--light-grey-bg);
  // Pixel border using clip-path
  // https://pixelcorners.lukeb.co.uk/
  clip-path: polygon(
    0px calc(100% - 40px),
    8px calc(100% - 40px),
    8px calc(100% - 24px),
    16px calc(100% - 24px),
    16px calc(100% - 16px),
    24px calc(100% - 16px),
    24px calc(100% - 8px),
    40px calc(100% - 8px),
    40px 100%,
    calc(100% - 40px) 100%,
    calc(100% - 40px) calc(100% - 8px),
    calc(100% - 24px) calc(100% - 8px),
    calc(100% - 24px) calc(100% - 16px),
    calc(100% - 16px) calc(100% - 16px),
    calc(100% - 16px) calc(100% - 24px),
    calc(100% - 8px) calc(100% - 24px),
    calc(100% - 8px) calc(100% - 40px),
    100% calc(100% - 40px),
    100% 40px,
    calc(100% - 8px) 40px,
    calc(100% - 8px) 24px,
    calc(100% - 16px) 24px,
    calc(100% - 16px) 16px,
    calc(100% - 24px) 16px,
    calc(100% - 24px) 8px,
    calc(100% - 40px) 8px,
    calc(100% - 40px) 0px,
    40px 0px,
    40px 8px,
    24px 8px,
    24px 16px,
    16px 16px,
    16px 24px,
    8px 24px,
    8px 40px,
    0px 40px
  );
}

// Name
.info-section {
  width: 70%;
  display: flex;
  flex-direction: column;
  min-width: 0;
  padding: 20px;
  height: 100%;
}

.name-wrapper {
  display: block;
  position: relative;
  justify-content: center;
  height: 80%;
}

.name {
  height: auto;
  overflow-wrap: break-word;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 13;
  -webkit-line-clamp: 13;
  -webkit-box-orient: vertical;
}

// Edit mode
.link-input {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 5px;
  border: 3px solid black;
  outline: none;
}

.invalid-text {
  position: absolute;
  top: 180px;
  left: 00px;
  padding: 8px 14px;
  background: #2b0f0f;
  border: 3px solid #ff4d4d;
  color: #ff4d4d;
  font-weight: bold;
  font-size: 14px;
}

.no-link {
  display: flex;
  font-size: 1em;
  text-align: center;
  margin-top: 40px;
}

// Buttons
.button-wrapper {
  display: flex;
  gap: 10px;
  justify-content: center;
  margin-top: 20px;
  height: 20%;
}

.edit-button {
  background-color: #0cb1fe;
  width: 50%;
}

.delete-button {
  background-color: #ff4d4d;
  width: 50%;
}

.save-button {
  background-color: #4caf50;
  width: 50%;
}

